--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,21 +17,21 @@ builds:
       - 7
     ignore:
       - goos: darwin
-        goarch: '386'
+        goarch: "386"
       - goos: freebsd
-        goarch: 'arm64'
+        goarch: "arm64"
 archives:
-- format: zip
-  name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
+  - format: zip
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 
 checksum:
-  name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
+  name_template: "{{ .ProjectName }}_{{ .Version }}_SHA256SUMS"
   algorithm: sha256
 signs:
   - artifacts: checksum
     args:
       - "--local-user"
-      - "A29F60D591A974E20B5E90695C886ACC44EB17C0"
+      - "{{ .Env.GPG_FINGERPRINT }}"
       - "--output"
       - "${signature}"
       - "--detach-sign"
